# Real-Time-Model-Predictive-Control

./: new_launch.launch
code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  object  object_detection.cpp~
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/app/: cam.h  twoBall.h
devel/include/openni_camera/: OpenNIConfig.h
devel/include/unit/: for_double.h  for_doubleRequest.h  for_doubleResponse.h  for_feedback.h  for_feedbackRequest.h  for_feedbackResponse.h  from_robot.h  from_robotRequest.h  from_robotResponse.h  twoBall.h  twoBallRequest.h  twoBallResponse.h
devel/lib/app/: SimplePTP  SimplePTP1  bup  client  fancy  move  move1  new  new_pid  pbp  pbp_cross  pbp_double  pbp_feedback  pbp_sim_test  pbp_test  pbp_vel  pid  ppid  pub  sub  testing
devel/lib/camera/: camera  check  click  color  cpub  fancy_cam  fix  fix_corner  fix_cross  fix_double  fix_test
devel/lib/openni_camera/: openni_node
devel/lib/pkgconfig/: app.pc  camera.pc  kuka_moveit_configuration.pc  lwr_description.pc  main.pc  moveit_resources.pc  openni_camera.pc  pr2_moveit_config.pc  unit.pc  utils.pc
devel/lib/python2.7/dist-packages/app/msg/: __init__.py  _cam.py  _twoBall.py
devel/lib/python2.7/dist-packages/openni_camera/cfg/: OpenNIConfig.py
devel/lib/python2.7/dist-packages/unit/srv/: __init__.py  _for_double.py  _for_feedback.py  _from_robot.py  _twoBall.py
devel/lib/unit/: boost_first  callgrind.out.12950  callgrind.out.13544  fresh  fresh_cone  fresh_cross  fresh_double  fresh_double_ros  fresh_feedback  fresh_feedback_angle  fresh_feedback_double  fresh_filter  fresh_maze  fresh_maze_rel  fresh_pieces  fresh_single  fresh_single_y  fresh_test  unit  unit_amotor  unit_corrected  unit_double  unit_obs  unit_sim  unit_single  unit_test  vel  vel_check  vel_double
devel/share/app/cmake/: app-msg-paths.cmake  appConfig.cmake
devel/share/camera/cmake/: cameraConfig.cmake
devel/share/common-lisp/ros/app/msg/: _package.lisp  _package_cam.lisp  _package_twoBall.lisp  app-msg.asd  cam.lisp  twoBall.lisp
devel/share/common-lisp/ros/unit/srv/: _package.lisp  _package_for_double.lisp  _package_for_feedback.lisp  _package_from_robot.lisp  _package_twoBall.lisp  for_double.lisp  for_feedback.lisp  from_robot.lisp  twoBall.lisp  unit-srv.asd
devel/share/kuka_moveit_configuration/cmake/: kuka_moveit_configurationConfig.cmake
devel/share/lwr_description/cmake/: lwr_descriptionConfig.cmake
devel/share/main/cmake/: mainConfig.cmake
devel/share/moveit_msgs/cmake/: moveit_msgs-msg-paths.cmake
devel/share/moveit_resources/cmake/: moveit_resourcesConfig.cmake
devel/share/openni_camera/cmake/: openni_cameraConfig.cmake
devel/share/openni_camera/docs/: OpenNIConfig.dox  OpenNIConfig.wikidoc
devel/share/pr2_moveit_config/cmake/: pr2_moveit_configConfig.cmake
devel/share/unit/cmake/: unit-msg-extras.cmake  unit-msg-paths.cmake  unitConfig.cmake
devel/share/utils/cmake/: utilsConfig.cmake
openni2_launch/cmake/: openni2_launchConfig.cmake
src/app/: CMakeLists.txt
src/app/msg/: cam.msg  twoBall.msg
src/app/src/: SimplePTP.cpp  SimplePTP.cpp~  SimplePTP1.cpp  SimplePTP_backup.cpp  client.cpp  fancy.cpp  move.cpp  move1.cpp  new_pid.cpp  pbp_cross.cpp  pbp_double.cpp~  pbp_feedback.cpp  pbp_feedback_double.cpp  pbp_feedback_single.cpp~  pbp_sim_test.cpp  pbp_sim_test.cpp~  pbp_test.cpp  pbp_vel.cpp  pid.cpp  proper_pid.cpp  pub.cpp  publisher.cpp  simple_new.cpp  simple_new.cpp~  sub.cpp  sub.cpp~  testing.cpp  with_pbp.cpp
src/bag/: video.launch~
src/camera/: CMakeLists.txt~
src/camera/src/: check.cpp  click.cpp  click_pub.cpp  color.cpp  fancy_cam.cpp  fix.cpp  fix.cpp~  fix_corner.cpp  fix_corner.cpp~  fix_cross.cpp  fix_cross.cpp~  fix_double.cpp  fix_test.cpp  image.cpp
src/main/: CMakeLists.txt
src/main/include/: ControlPBP.h  UnityOde.h
src/main/src/: ControlPBP.cpp  UnityOde.cpp  UnityOde.cpp~
src/unit/: CMakeLists.txt~  boost_first.cpp  fresh_cone.cpp  fresh_cross.cpp  fresh_cross.cpp~  fresh_double.cpp  fresh_double_ros.cpp  fresh_double_ros.cpp~  fresh_feedback.cpp  fresh_feedback.cpp~  fresh_feedback_angle.cpp~  fresh_feedback_double.cpp  fresh_feedback_double.cpp~  fresh_filter.cpp  fresh_maze.cpp  fresh_maze_rel.cpp  fresh_maze_rel.cpp~  fresh_pieces.cpp  fresh_short.cpp  fresh_short.cpp~  fresh_single.cpp  fresh_single.cpp~  fresh_single_y.cpp~  fresh_test.cpp  package.xml  pide.cpp  unit.cpp  unit_amotor.cpp  unit_amotor_obs.cpp  unit_amotor_obs_backup.cpp  unit_backup.cpp  unit_double.cpp  unit_double.cpp~  unit_double_backup.cpp  unit_similarity_test.cpp  unit_single.cpp  unit_test.cpp  unit_working.cpp  vel.cpp  vel_check.cpp  (+3 more)
src/unit/srv/: for_double.srv~  for_feedback.srv~  from_robot.srv~  twoBall.srv
src/utils/include/: UnityOde.h
src/utils/src/: ClippedGaussianSampling.cpp  DiagonalGMM.cpp
